--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">Tower Phone</string>
+
+    <!-- END ACTIVITY -->
+    <string name="end_game">Fin de la partie</string>
+
 </resources>
