Ajout des images

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Tower Phone</string>
+    <string name="app_name">Protect the \nGraal</string>
 
     <!-- END ACTIVITY -->
     <string name="end_game">Fin de la partie</string>
