--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,6 @@
 
     <!-- END ACTIVITY -->
     <string name="end_game">Fin de la partie</string>
-    <string name="regle">Bienvenue dans Protect the Grail.\nDans ce jeu, vous devez survivre à plusieurs vagues sans que les ennemis n\'atteignent le Graal.\nPour cela, n\'hésitez pas à les écraser avec votre doigt quand ils sont proches du Graal ou avec la boule en tournant votre téléphone. En cachant le capteur de luminosité, vous pouvez ralentir vos ennemis perdus dans la pénombre.</string>
+    <string name="regle">Votre but : Protéger le Graal ! \n\nÉliminez vos ennemis : \n- Écrasez les avec votre doigt quand ils sont dans la zone du Graal \n- Écrasez les avec la boule en inclinant votre téléphone\n- Cacher le capteur de luminosité pour les ralentir</string>
 
 </resources>
